# py_data_helpers

./: .bumpversion.cfg  .coveragerc  .gitignore  README.md  bump_and_deploy.sh  pyproject.toml  setup.cfg  setup.py
data_helpers/: cls_construction.py  cls_parsing.py  comparisons.py  data_loaders.py  dictionary_helpers.py  diff.py  encoders.py  fill_np_array.py  functional_helpers.py  list_helpers.py  meta_type.py  snapshot_helpers.py  time_data.py  util.py  version.py
data_helpers/encoders/: __init__.py  encoders.py  meta_class_encoder.py
notebooks/: cls_construction.ipynb  generate_cls_ui.ipynb  generate_cls_ui_class.ipynb
tests/: cls_construction_test.py  cls_parsing_test.py  comparisons_test.py  dictionary_helpers_test.py  diff_test.py  encoders_test.py  fill_np_array_test.py  functional_helpers_test.py  list_helpers_test.py  time_data_test.py  util_test.py
tests/encoders/: encoders_test.py  meta_class_encoder_test.py
tests/snapshots/: snap_cls_construction_test.py
tests/snapshots/cls_construction_test/test_can_dump_group_to_json/InnerGroupStructure-obj1/: out.json
tests/snapshots/cls_construction_test/test_can_dump_group_to_json/example_field-obj0/: out.json
tests/snapshots/cls_construction_test/test_can_dump_group_to_json/example_group-obj2/: out.json
