[project]
name = "data_helpers"
version = "0.1.32"
description = "A set of helpers for working with various datatypes"
authors = [{ "email" = "sblandcouk@gmail.com", "name" = "Sam Bland" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["numpy>=1.18.3"]
[dependency-groups]
dev = [
  "pytest>=8.3.3",
  "pytest-cov>=5.0.0",
  "ruff>=0.7.0",
  "pre-commit>=2.7.1",
  "bump2version>=1.0.1",
  "pytest-snapshot>=0.9.0",
  "ipywidgets>=8.1.8",
]


test = [
  "pytest>=8.3.3",
  "pytest-cov>=5.0.0",
  "pytest-mock>=3.14.0",
  "pytest-benchmark>=3.4.1",
  "pytest-snapshot>=0.9.0",
  "ipywidgets>=8.1.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.ruff]
target-version = "py312"
line-length = 100
exclude = ["__init__.py", "tests/*", "docs/*", "examples/*"]

[tool.ruff.lint.per-file-ignores]
"_test.py" = ["D100", "D101", "D102", "D103", "D107"]
"test_*.py" = ["D100", "D101", "D102", "D103", "D107"]
